HotSpot build failure with GCC 7.1.1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • 10
    • b21

      http://mail.openjdk.java.net/pipermail/hotspot-dev/2017-August/027746.html

      I tried to jdk10/hs on Fedora 26 x86_64 with GCC 7.1.1, however it was failed as below:
      -------------------
      /home/ysuenaga/OpenJDK/jdk10-hs/hotspot/src/share/vm/oops/array.hpp: In static member function 'static int Array<T>::size(int, int)':
      /home/ysuenaga/OpenJDK/jdk10-hs/hotspot/src/share/vm/oops/array.hpp:138:12: error: there are no arguments to 'align_size_up' that depend on a template parameter, so a declaration of 'align_size_up' must be available [-fpermissive]
            return align_size_up(byte_sizeof(length, elm_byte_size), BytesPerWord) / BytesPerWord; // FIXME
                   ^~~~~~~~~~~~~
      /home/ysuenaga/OpenJDK/jdk10-hs/hotspot/src/share/vm/oops/array.hpp:138:12: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
      In file included from /home/ysuenaga/OpenJDK/jdk10-hs/hotspot/src/share/vm/runtime/os.inline.hpp:30:0,
                        from /home/ysuenaga/OpenJDK/jdk10-hs/hotspot/src/share/vm/runtime/thread.inline.hpp:31,
          ... (rest of output omitted)
      -------------------

      I think this failure is since JDK-8072061:
         http://hg.openjdk.java.net/jdk10/hs/hotspot/rev/731370f39fcd#l42.35


      http://mail.openjdk.java.net/pipermail/hotspot-dev/2017-August/027753.html

      align_size_up() as recently removed.

      8178499: Remove _ptr_ and _size_ infixes from align functions

            Assignee:
            Ioi Lam
            Reporter:
            Yasumasa Suenaga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: