8185826: HotSpot build failure with GCC 7.1.1

Removed unused function

Reviewed-by: dholmes, ysuenaga